tetris_logic1/workspace/.metadata/.plugins/org.eclipse.cdt.ui/mb_keyboard.build.log
00:27:48 **** Build of configuration Debug for project mb_keyboard ****
make all 
Building file: ../src/lw_usb/HID.c
Invoking: MicroBlaze gcc compiler
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/HID.o" -I/home/sean/Downloads/git/ECE385_FP/tetris_logic1/workspace/tetris_top/export/tetris_top/sw/tetris_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/HID.d" -MT"src/lw_usb/HID.o" -o "src/lw_usb/HID.o" "../src/lw_usb/HID.c"
../src/lw_usb/HID.c:9:1: warning: braces around scalar initializer
    9 | HID_DEVICE hid_device = { { 0 } };
      | ^~~~~~~~~~
../src/lw_usb/HID.c:9:1: note: (near initialization for 'hid_device.addr')
Finished building: ../src/lw_usb/HID.c
 
Building file: ../src/lw_usb/MAX3421E.c
Invoking: MicroBlaze gcc compiler
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/MAX3421E.o" -I/home/sean/Downloads/git/ECE385_FP/tetris_logic1/workspace/tetris_top/export/tetris_top/sw/tetris_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/MAX3421E.d" -MT"src/lw_usb/MAX3421E.o" -o "src/lw_usb/MAX3421E.o" "../src/lw_usb/MAX3421E.c"
In file included from /home/sean/Downloads/git/ECE385_FP/tetris_logic1/workspace/tetris_top/export/tetris_top/sw/tetris_top/standalone_microblaze_0/bspinclude/include/xspi.h:303,
                 from ../src/lw_usb/MAX3421E.c:14:
../src/lw_usb/MAX3421E.c: In function 'SPI_init':
/home/sean/Downloads/git/ECE385_FP/tetris_logic1/workspace/tetris_top/export/tetris_top/sw/tetris_top/standalone_microblaze_0/bspinclude/include/xstatus.h:44:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   44 | #define XST_DEVICE_NOT_FOUND            2L
      |                                         ^~
../src/lw_usb/MAX3421E.c:38:24: note: in expansion of macro 'XST_DEVICE_NOT_FOUND'
   38 |                 return XST_DEVICE_NOT_FOUND;
      |                        ^~~~~~~~~~~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init() {
      |      ^~~~~~~~
In file included from /home/sean/Downloads/git/ECE385_FP/tetris_logic1/workspace/tetris_top/export/tetris_top/sw/tetris_top/standalone_microblaze_0/bspinclude/include/xspi.h:303,
                 from ../src/lw_usb/MAX3421E.c:14:
/home/sean/Downloads/git/ECE385_FP/tetris_logic1/workspace/tetris_top/export/tetris_top/sw/tetris_top/standalone_microblaze_0/bspinclude/include/xstatus.h:43:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   43 | #define XST_FAILURE                     1L
      |                                         ^~
../src/lw_usb/MAX3421E.c:44:24: note: in expansion of macro 'XST_FAILURE'
   44 |                 return XST_FAILURE;
      |                        ^~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init() {
      |      ^~~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MAXbytes_wr':
../src/lw_usb/MAX3421E.c:116:14: warning: unused variable 'ReadBuf' [-Wunused-variable]
  116 |         BYTE ReadBuf[nbytes + 1];
      |              ^~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MAX3421E_init':
../src/lw_usb/MAX3421E.c:331:49: error: 'XPAR_TIMER_USB_AXI_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_GPIO_USB_RST_DEVICE_ID'?
  331 |         Status = XTmrCtr_Initialize(&Usb_timer, XPAR_TIMER_USB_AXI_DEVICE_ID);
      |                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                 XPAR_GPIO_USB_RST_DEVICE_ID
../src/lw_usb/MAX3421E.c:331:49: note: each undeclared identifier is reported only once for each function it appears in
../src/lw_usb/MAX3421E.c: In function 'MAX3421E_Task':
../src/lw_usb/MAX3421E.c:366:46: warning: suggest parentheses around comparison in operand of '&' [-Wparentheses]
  366 |         if (XGpio_DiscreteRead(&Gpio_int, 1) & 0x01 == 0) {
      |                                              ^
../src/lw_usb/MAX3421E.c: In function 'MaxGpxHandler':
../src/lw_usb/MAX3421E.c:402:14: warning: variable 'GPINIRQ' set but not used [-Wunused-but-set-variable]
  402 |         BYTE GPINIRQ;
      |              ^~~~~~~
make: *** [src/lw_usb/subdir.mk:26: src/lw_usb/MAX3421E.o] Error 1

00:27:49 Build Finished (took 116ms)

